<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Magneto</string>
    <string name="action_settings">Settings</string>
	<string name="titre">Gala Esiea</string>
    <string name="connexion">Connectez vous</string>
	<string name="adresse_email">Adresse email</string>
	<string name="mot_de_passe">Mot de passe</string>
	<string name="connexion_button">Se connecter</string>
	<string name="connexion_active">Rester connecté</string>
	<string name="inscription">Créez votre profil</string>
	<string name="inscription_button">S\'inscrire</string>
	
	<string name="titre_inscription">Remplissez les champs</string>
	<string name="prenom">Prenom</string>
	<string name="Nom">Nom</string>
	<string name="mot_de_passe_check">Confirmez mdp</string>
	<string name="enregistrer_inscription_button">S\'enregistrer</string>
	
	<string name="liste_participants">Ont repondu present</string>
	    
	<string name="onglet_1">onglet 1</string>
    <string name="label1">one</string>
    <string name="label2">two</string>
    <string name="body1"> body one</string>
    <string name="body2">body two</string>
	    </resources>
