<?xml version="1.0" encoding="UTF-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp" >


 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/titre"
           	android:gravity="left"
           	android:textStyle="bold"
           	android:textSize="25sp"
           	android:textColor="#D473D4"
           	android:layout_marginBottom="15dp"
           	android:layout_marginTop="15dp"
             />
        
     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
        <EditText
            android:id="@+id/editText1"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/adresse_email"
            android:inputType="textEmailAddress"
           	android:layout_marginBottom="15dp">
            <requestFocus />
        </EditText>
     </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <EditText
            android:id="@+id/editText2"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mot_de_passe"
            android:inputType="textPassword" 
            android:layout_marginBottom="20dp">
            <requestFocus />
        </EditText> 
	 </LinearLayout>
	
     <LinearLayout  
      	 android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
        
         <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connexion_button" 
            android:layout_marginBottom="15dp"      
            />
     <RadioButton
         android:id="@+id/radioButton1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/connexion_active" />
	</LinearLayout>
	 	
      <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inscription"
            android:textColor="#D473D4"   
            android:textSize="20sp" 
            android:layout_marginBottom="15dp" 
            android:layout_marginTop="15dp"    
             />
      
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inscription_button" 
            />

</LinearLayout>
